Fixed bugs with room ID and overflowing

--- a/frontend/src/assets/stylesheets/style.css
+++ b/frontend/src/assets/stylesheets/style.css
@@ -66,6 +66,7 @@ html, body {
   width: 85%;
   height: 80%;
   border: 5px solid black;
+  overflow-y: scroll;
 }
 .message {
   margin: 5px;
